--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BOT_TOKEN=
-REACT_APP_WEB_LINK =
-REACT_APP_COMMUNITY_LINK =
+REACT_APP_BOT_TOKEN="6712795249:AAFtMcD9Ej3SzGchvhWQvvCNIAU5DXDoFqc",
+REACT_APP_WEB_LINK =""
+REACT_APP_COMMUNITY_LINK =""
