--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "telegraf": "^4.16.3",
+    "styled-components": "^6.1.13",
+    "framer-motion": "^11.2.10",
+    "tailwindcss": "^3.4.3",
+    "telegraf": "^4.8.1",
+    "uuid": "^9.0.1",
+ 
     "web-vitals": "^2.1.4"
   },
   "scripts": {
